@@ -40,11 +40,6 @@ if prefer :railsapps, 'rails-prelaunch-signup'
       end
     end
 
-    # >-------------------------------[ Migrations ]--------------------------------<
-    generate 'migration AddOptinToUsers opt_in:boolean'
-    run 'bundle exec rake db:drop'
-    run 'bundle exec rake db:migrate'
-
     # >-------------------------------[ Models ]--------------------------------<
 
     copy_from_repo 'app/models/user.rb', :repo => repo
@@ -81,7 +76,6 @@ if prefer :railsapps, 'rails-prelaunch-signup'
     copy_from_repo 'app/views/user_mailer/welcome_email.html.erb', :repo => repo
     copy_from_repo 'app/views/user_mailer/welcome_email.text.erb', :repo => repo
     copy_from_repo 'app/views/users/index.html.erb', :repo => repo
-    remove_file 'app/views/users/_user.html.erb'
     copy_from_repo 'public/thankyou.html', :repo => repo
 
     # >-------------------------------[ Routes ]--------------------------------<
@@ -93,7 +87,6 @@ if prefer :railsapps, 'rails-prelaunch-signup'
     # >-------------------------------[ Assets ]--------------------------------<
 
     copy_from_repo 'app/assets/javascripts/application.js', :repo => repo
-    copy_from_repo 'app/assets/javascripts/users.js.coffee', :repo => repo
     copy_from_repo 'app/assets/stylesheets/application.css.scss', :repo => repo
 
     # >-------------------------------[ Cucumber ]--------------------------------<
